fix(vue-table): align actionbar header row height with react

--- a/packages/@vue-spectrum/table/src/table.css
+++ b/packages/@vue-spectrum/table/src/table.css
@@ -52,7 +52,8 @@
 
 .vs-table__head-cell {
   display: table-cell;
-  height: 34px;
+  padding-top: 0;
+  padding-bottom: 0;
   vertical-align: middle;
 }
 
@@ -65,6 +66,7 @@
 
 .vs-table__sort-button {
   align-items: center;
+  box-sizing: border-box;
   display: flex;
   height: 34px;
 }
